--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Ronak Jain - Best Web Developer in Guwahati, Assam"
+      content="motoMG - The best bike, helmet, gaers, modification store in Guwahati, Assam"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/gearPitIcon.png" />
     <!--
